# w5-domesticHeating

./: .gitignore  CMakeLists.txt  README.md
docs/: components.script
feeds/ci40-project5/: Makefile.example
files/: timeSchedule.txt
include/: Application.hpp  AwaBridge.hpp  ConfigurationChangeRule.hpp  DefaultConfig.hpp  EventWriter.hpp  GenericSensor.hpp  HeaterControlRule.hpp  Logic.hpp  LogicRule.hpp  MasterControler.hpp  MotionSensor.hpp  RelayControlRule.hpp  SQLiteFillableStatement.hpp  SQLiteSensorValueSerializer.hpp  SQLiteStorage.hpp  Schedule.hpp  ScheduleItem.hpp  Sensor.hpp  SensorStatus.hpp  SensorTypes.hpp  SensorValue.hpp  SimpleCriteria.hpp  StandbyRule.hpp  StoreMeasurementsRule.hpp  TemperatureIdentifier.hpp  TemperatureSensor.hpp
include/awa/: AwaException.hpp  ClientChangeSubscription.hpp  ClientGetOperation.hpp  ClientGetResponse.hpp  ClientSession.hpp  ClientSubscribeOperation.hpp  Common.hpp  Consts.hpp  ServerObservation.hpp  ServerObserveOperation.hpp  ServerSession.hpp  ServerWriteOperation.hpp
scripts/: default.cfg  defineObjects.sh  prepare.sh  project5-ds.bsc  project5-localhost.bsc  psk.properties.sample  setupEnvironment.sh
src/: Application.cpp  AwaBridge.cpp  ConfigurationChangeRule.cpp  DefaultConfig.cpp  EventWriter.cpp  HeaterControlRule.cpp  Logic.cpp  LogicRule.cpp  MasterController.cpp  MotionSensor.cpp  RelayControlRule.cpp  SQLiteFillableStatement.cpp  SQLiteSensorValueSerializer.cpp  SQLiteStorage.cpp  Schedule.cpp  Sensor.cpp  SensorStatus.cpp  SensorValue.cpp  StandbyRule.cpp  StoreMeasurementsRule.cpp  TemperatureIdentifier.cpp  TemperatureSensor.cpp  main.cpp
(+10 files in other folders)
